@@ -132,3 +132,4 @@
 090515 cs  wtt       Popup menu on attributes. Methods HelpClass, InsertSelectedObject and ChangeValue added.
 090515 cs  wtt       Bugfix in ConnectGraph method for PlantHier objects.
 090518 cs  wb        Wb method PostRename added and implemented for XttGraph and ProjectReg objects.
+090518 cs  wb        Advanced user set as default in wb.
